force-app/main/default/objects/Onboarding_Task__c/fields/Job_Application__c.field-meta.xml
<CustomField>
    <fullName>Job_Application__c</fullName>
    <description>The parent Job Application for this onboarding task.</description>
    <label>Job Application</label>
    <referenceTo>Job_Application__c</referenceTo>
    <relationshipLabel>Onboarding Tasks</relationshipLabel>
    <relationshipName>Onboarding_Tasks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>