force-app/main/default/objects/Onboarding_Task__c/fields/Notes__c.field-meta.xml
<CustomField>
    <fullName>Notes__c</fullName>
    <description>Verification or completion notes for this onboarding task.</description>
    <label>Notes</label>
    <type>TextArea</type>
</CustomField>