force-app/main/default/objects/Onboarding_Task__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>The classification type of onboarding task.</description>
    <label>Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Document Submission</fullName>
            </value>
            <value>
                <fullName>System Access</fullName>
            </value>
            <value>
                <fullName>ID Card</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>